<resources>
    <string name="app_name">Broga Nua</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hintName">Name</string>
    <string name="hintPassword">Password</string>
    <string name="login">Login</string>
    <string name="no_of_incorrect_attemps">No. of incorrect attemps:</string>
    <string name="newUserRegister">New User? Register</string>
    <string name="register">Register</string>
    <string name="alreadyRegisteredLogin">Already Registered? Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset Password</string>
    <string name="age">Age</string>
    <string name="shoe_size_eu">Shoe Size (EU)</string>
    <string name="profilepicture">profilePicture</string>
    <string name="name_colon">Name:</string>
    <string name="age_colon">Age:</string>
    <string name="email_colon">Email:</string>
    <string name="shoe_size_eu_colon">Shoe Size (EU):</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_password">Enter Password:</string>
    <string name="save">Save</string>
    <string name="brand">brand</string>
    <string name="productimage">productImage</string>
    <string name="model">model</string>
    <string name="price">price </string>
    <string name="shop">Shop</string>
    <string name="app_logo">App Logo</string>
    <string name="profile">Profile</string>
    <string name="open_on_instagram">Open on Instagram</string>
    <string name="caption">Caption</string>
    <string name="instagram_image">Instagram Image</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
</resources>
